# DeployUS

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Commentaires.txt  README.md  gitus.cpp  main.cpp  run_tests.py  setup.sh
BuildUs/: CMakeLists.txt  main.cpp
BuildUs/src/: BuildUS.cpp  BuildUS.hpp  CMakeLists.txt
BuildUs/src/Common/: Common.cpp  Common.hpp
BuildUs/src/FileSystem/: BuildUSCache.cpp  BuildUSCache.hpp  ConfigFile.cpp  ConfigFile.hpp
BuildUs/src/GCCDriver/: GCCDriver.cpp  GCCDriver.hpp
BuildUs/tests/: CMakeLists.txt  CleanTest.cpp  CompilationTest.cpp  ConfigTest.cpp  LinkingTest.cpp  YAMLFileTest.cpp  unittestscommon.cpp  unittestscommon.hpp
BuildUs/tests/config/: 2projectnames.buildus  badconfig2.buildus  badconfig3.buildus  config2.buildus  config_InclVarDNE.buildus  config_compileissue1.buildus  config_compileissue2.buildus  config_libsVarDNE.buildus  config_linkerissue1.buildus  config_linkerissue2.buildus  configprog1.buildus  configprog2.buildus
BuildUs/tests/prog1/: main.cpp  utils.hpp
BuildUs/tests/prog2/: main.cpp  utils.cpp
BuildUs/tests/prog_compileissue1/: main.cpp
BuildUs/tests/prog_compileissue2/: main.cpp  utils.cpp
BuildUs/tests/prog_linkerissue1/: utils.cpp
BuildUs/tests/prog_linkerissue2/: utils.cpp
DeployUS/: Dockerfile  Dockerfile.db  Dockerfile.tests  docker-compose.tests.yml  docker-compose.yml  requirements.txt  run.py
DeployUS/app/: __init__.py  db.py  utils.py  views.py
DeployUS/app/static/css/: style.css
DeployUS/app/templates/public/: index.html  launch.html  workers.html
DeployUS/app/templates/public/templates/: public_template.html
DeployUS/db/: dbconfig.json  init.sql
DeployUS/tests/: Dockerfile  conftest.py  requirements.txt  run_tests.py  run_tests.sh  test_DeployUS.py  test_deployus.py  test_get_sqltables.py  test_jobs.py  test_landingpages.py  test_persistance_data.py  test_scripts.py  test_workers.py
Golang/: Dockerfile  main.go
Python/: Dockerfile  run.py
Python/app/: app.py
WatchUS/: Dockerfile  Dockerfile.tests  docker-compose.tests.yml  docker-compose.yml  main.go
WatchUS/tests/: docker-compose.dummy.yml  go.mod  run_tests.py  watchus_test.go
WorkUS/: Dockerfile  Dockerfile.tests  docker-compose.tests.yml  docker-compose.yml  main.go
WorkUS/tests/: run_tests.py  workus_test.go
continuous-delivery/: .machines  cd.py
git/: CMakeLists.txt  argParser.cpp  argParser.h  common.cpp  common.hpp  dummy.cpp  start.cpp  start.hpp
git/commands/: AddCommand.cpp  AddCommand.hpp  BaseCommand.cpp  BaseCommand.hpp  CheckoutCommand.cpp  CheckoutCommand.hpp  CommitCommand.cpp  CommitCommand.hpp  HelpCommand.cpp  HelpCommand.hpp  InitCommand.cpp  InitCommand.hpp  UnknownCommand.cpp  UnknownCommand.hpp
git/filesystem/: GitFilesystem.cpp  GitFilesystem.hpp  GitIndexFile.cpp  GitIndexFile.hpp
git/objects/: BaseGitObject.cpp  BaseGitObject.hpp  GitBlob.cpp  GitBlob.hpp  GitCommit.cpp  GitCommit.hpp  GitObjectCommon.hpp  GitTree.cpp  GitTree.hpp
gitus/: gitus.cpp
gitus/git/: common.cpp  common.hpp  start.cpp
gitus/git/commands/: AddCommand.cpp  AddCommand.hpp  CheckoutCommand.cpp  CommitCommand.cpp  CommitCommand.hpp  InitCommand.cpp  InitCommand.hpp
gitus/git/filesystem/: GitFilesystem.cpp  GitFilesystem.hpp  GitIndexFile.cpp  GitIndexFile.hpp
gitus/git/objects/: GitBlob.cpp  GitBlob.hpp  GitCommit.cpp  GitCommit.hpp  GitObjectCommon.cpp  GitTree.cpp
gitus/tests/: CMakeLists.txt  unittests.hpp
sample-projects/helloworld/: Dockerfile  docker-compose.yml  docker-compose8001.yml  setup.sh
src/: CMakeLists.txt
src/Common/: Common.hpp
src/FileSystem/: CMakeLists.txt  Common.cpp  Common.hpp  ConfigFile.cpp  ConfigFile.hpp
tests/: CMakeLists.txt  YAMLFileTest.cpp  unittests.cpp  unittests.hpp
tests/config/: 2projectnames.buildus  badconfig1.buildus  config1.buildus  config2.buildus
tests/prog1/: utils.cpp  utils.hpp
